Phase 1: Initialize Django project under web/, isolate legacy as deprecated, update requirements and .gitignore, configure settings, create orders app, run migrations, create superuser, verify admin

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,11 @@ dist/
 build/
 *.egg-info/
 
+# Django
+db.sqlite3
+media/
+staticfiles/
+
 # Dropbox integration secrets and credentials
 *.token
 *.secret
