Refactor: Reorganize services by entity + prep for Next.js migration
- Refactor services structure: organize by entity (lease/order/report) instead of workflow type
- Move runsheet and document archive services to services/lease/
- Add new document_images_link_repository for lease document links
- Add migration for auto_create_document_archives feature
- Create Next.js + shadcn/ui migration PRD and task list
- Update .gitignore for Next.js frontend (node_modules, .cursor, etc.)
- Remove old task files (django-migration-plan, prd-document-archive-discovery)

Bootstrap template changes intentionally not committed - being replaced by Next.js frontend

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
-# PyCharm specific
+# IDE specific
 .idea/
 *.iml
+.cursor/
+.vscode/
 
 # Caches and logs
 *.pyc
@@ -60,3 +62,35 @@ logs/
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+# Node modules (any location)
+node_modules/
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+
+# Root package.json (MCP tool only - not for production)
+/package.json
+
+# Next.js / Frontend
+frontend/node_modules/
+frontend/.next/
+frontend/out/
+frontend/build/
+frontend/dist/
+frontend/.env.local
+frontend/.env.development.local
+frontend/.env.test.local
+frontend/.env.production.local
+frontend/.turbo
+frontend/*.tsbuildinfo
+frontend/next-env.d.ts
+
+# NPM / Yarn
+frontend/package-lock.json
+frontend/yarn.lock
+frontend/pnpm-lock.yaml
+frontend/.pnpm-store
+
+# Vercel
+frontend/.vercel
