feat: implement Basecamp Project API extension (US1-US4)
- Add project management methods (list_projects, get_project)
- Add to-do list methods (list_todolists, create_todolist) with duplicate prevention
- Add task methods (create_todo, update_todo) with full parameter support
- Add group management methods (list_groups, create_group)
- Implement comprehensive input validation for all parameters
- Add structured error handling with exponential backoff for rate limits
- Add tiered logging (INFO/WARNING/ERROR) with request duration tracking
- Fix OAuth callback validation for 8-character authorization codes

Tested with American Abstract LLC Test Project:
- ✅ US1: Project retrieval working
- ✅ US2: To-do list creation with duplicate prevention
- ✅ US3: Task creation and updates with assignees/due dates
- ✅ US4: Group creation and task assignment to groups

Spec files added: 004-basecamp-project-api/{spec,plan,research,data-model,contracts,quickstart,tasks}.md
Planning doc: context/basecamp-workflow-templates-plan.md

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,9 @@ coverage.xml
 .hypothesis/
 .pytest_cache/
 
+# Tool-specific directories
+.playwright-mcp/
+
 # Jupyter Notebook
 .ipynb_checkpoints
 
