chore: Update .gitignore for Django/Next.js stack
- Add additional Django patterns (*.pot, local_settings.py, celerybeat files)
- Add db.sqlite3-journal for SQLite WAL mode
- Existing Django and Next.js patterns already comprehensive
- No tkinter-specific patterns to remove

Ref: specs/008-separate-django-repo/spec.md

--- a/.gitignore
+++ b/.gitignore
@@ -42,8 +42,13 @@ build/
 
 # Django
 db.sqlite3
+db.sqlite3-journal
 media/
 staticfiles/
+*.pot
+local_settings.py
+celerybeat-schedule
+celerybeat.pid
 
 # Dropbox integration secrets and credentials
 *.token
